# archivist

./: .gitignore  DATABASE.md  DEPLOYMENT.md  Dockerfile  FIX_PLAN.md  GEMINI.md  README.md  ai.py  archiver.py  bot.py  db.py  deployment.yaml  fetcher.py  formatter.py  main.py  net.py  parser.py  pyproject.toml  secrets.example.yaml  snapshot.py  youtube.py
config/: default.yaml
tests/: test_formatter.py  test_net.py  test_parser.py  test_youtube.py
